[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "anthropic-batch-kit"
version = "0.1.0"
description = "Thin helper around the Anthropic Message Batches API. Submit, poll, retrieve, with a progress callback and a token + USD tally per batch."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "ai",
  "llm",
  "anthropic",
  "claude",
  "batch",
  "message-batches",
  "cost",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/anthropic-batch-kit"
Source = "https://github.com/MukundaKatta/anthropic-batch-kit"
Issues = "https://github.com/MukundaKatta/anthropic-batch-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/anthropic_batch_kit"]
